[gd_scene load_steps=33 format=3 uid="uid://udwbvack0gth"]

[ext_resource type="Script" path="res://players/player2/player2.gd" id="1_x8gya"]

[ext_resource type="Texture2D" uid="uid://dlgkb6ifpwh84" path="res://assets/player 2/player_two-static_512x512.png" id="2_iw21j"]
[ext_resource type="Texture2D" uid="uid://c2fv6utseqdba" path="res://assets/player 2/player_two-static-grab_512x512.png" id="3_ps1im"]
[ext_resource type="Texture2D" uid="uid://65wcnbqb7mb4" path="res://assets/player 2/WalkGrab_animation/player1_walk-grab00.png" id="3_rw8y3"]
[ext_resource type="Texture2D" uid="uid://duv3pgbt4quan" path="res://assets/player 2/WalkGrab_animation/player1_walk-grab01.png" id="4_8hf10"]
[ext_resource type="Texture2D" uid="uid://dlwfjhj8xybt5" path="res://assets/player 2/WalkAnimation/player1_walk00.png" id="4_itqv8"]
[ext_resource type="Texture2D" uid="uid://gkf2sklriyg7" path="res://assets/player 2/WalkGrab_animation/player1_walk-grab02.png" id="5_03q5a"]
[ext_resource type="Texture2D" uid="uid://bgqhp0vytshcl" path="res://assets/player 2/WalkAnimation/player1_walk01.png" id="5_xruj5"]
[ext_resource type="Texture2D" uid="uid://db0tagvnlbva2" path="res://assets/player 2/WalkGrab_animation/player1_walk-grab03.png" id="6_lpj6a"]
[ext_resource type="Texture2D" uid="uid://b5p7wqvoenylw" path="res://assets/player 2/WalkAnimation/player1_walk02.png" id="6_xdgnu"]
[ext_resource type="Texture2D" uid="uid://dqurck64s527c" path="res://assets/player 2/WalkAnimation/player1_walk03.png" id="7_2ulw4"]
[ext_resource type="Texture2D" uid="uid://jg0a6ii2wwt0" path="res://assets/player 2/WalkGrab_animation/player1_walk-grab04.png" id="7_o7vln"]
[ext_resource type="Texture2D" uid="uid://ctj7v85p4pem8" path="res://assets/player 2/WalkAnimation/player1_walk04.png" id="8_1qlne"]
[ext_resource type="Texture2D" uid="uid://tttlw6fmkyh0" path="res://assets/player 2/WalkGrab_animation/player1_walk-grab05.png" id="8_b635g"]
[ext_resource type="Texture2D" uid="uid://ckhvdsko3mvl8" path="res://assets/player 2/WalkGrab_animation/player1_walk-grab06.png" id="9_xo455"]
[ext_resource type="Texture2D" uid="uid://m6v35t58tcol" path="res://assets/player 2/WalkAnimation/player1_walk05.png" id="9_yny71"]
[ext_resource type="Texture2D" uid="uid://bx8reqtdrxo41" path="res://assets/player 2/WalkGrab_animation/player1_walk-grab07.png" id="10_eiovf"]
[ext_resource type="Texture2D" uid="uid://bh07se63xfuvg" path="res://assets/player 2/WalkAnimation/player1_walk06.png" id="10_t8n2l"]
[ext_resource type="Texture2D" uid="uid://oalie1xgxng2" path="res://assets/player 2/WalkAnimation/player1_walk07.png" id="11_uedqi"]

[ext_resource type="Texture2D" uid="uid://dyucvms08330a" path="res://assets/UI/E_anim/letter-E00.png" id="20_pmc6j"]
[ext_resource type="Texture2D" uid="uid://ccmnx1sw63w2s" path="res://assets/UI/E_anim/letter-E01.png" id="21_2hiuy"]
[ext_resource type="Texture2D" uid="uid://fek2ikxj8e8m" path="res://assets/UI/E_anim/letter-E02.png" id="22_a2arl"]
[ext_resource type="Texture2D" uid="uid://c6x2tha748vot" path="res://assets/UI/E_anim/letter-E03.png" id="23_ss7w2"]
[ext_resource type="Texture2D" uid="uid://dvnn0ll53h2rm" path="res://assets/UI/E_anim/letter-E04.png" id="24_fp2jk"]
[ext_resource type="Texture2D" uid="uid://dtg6bhhl4hyvj" path="res://assets/UI/E_anim/letter-E05.png" id="25_7d66d"]
[ext_resource type="Texture2D" uid="uid://bmspapspu2jfr" path="res://assets/UI/E_anim/letter-E06.png" id="26_htn0u"]
[ext_resource type="Texture2D" uid="uid://buktltp57w0cv" path="res://assets/UI/E_anim/letter-E07.png" id="27_2uy4f"]
[ext_resource type="Texture2D" uid="uid://dywjboxnmam34" path="res://assets/UI/E_anim/letter-E08.png" id="28_q4h76"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d8ihv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ps1im")
}],
"loop": true,
"name": &"grabbing",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rw8y3")
}, {
"duration": 1.0,
"texture": ExtResource("4_8hf10")
}, {
"duration": 1.0,
"texture": ExtResource("5_03q5a")
}, {
"duration": 1.0,
"texture": ExtResource("6_lpj6a")
}, {
"duration": 1.0,
"texture": ExtResource("7_o7vln")
}, {
"duration": 1.0,
"texture": ExtResource("8_b635g")
}, {
"duration": 1.0,
"texture": ExtResource("9_xo455")
}, {
"duration": 1.0,
"texture": ExtResource("10_eiovf")
}],
"loop": true,
"name": &"grabbing_walking",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_iw21j")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_itqv8")
}, {
"duration": 1.0,
"texture": ExtResource("5_xruj5")
}, {
"duration": 1.0,
"texture": ExtResource("6_xdgnu")
}, {
"duration": 1.0,
"texture": ExtResource("7_2ulw4")
}, {
"duration": 1.0,
"texture": ExtResource("8_1qlne")
}, {
"duration": 1.0,
"texture": ExtResource("9_yny71")
}, {
"duration": 1.0,
"texture": ExtResource("10_t8n2l")
}, {
"duration": 1.0,
"texture": ExtResource("11_uedqi")
}],
"loop": true,
"name": &"walking",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_re8f4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nnjnw"]
radius = 50.0

[sub_resource type="SpriteFrames" id="SpriteFrames_bpmib"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_pmc6j")
}, {
"duration": 1.0,
"texture": ExtResource("21_2hiuy")
}, {
"duration": 1.0,
"texture": ExtResource("22_a2arl")
}, {
"duration": 1.0,
"texture": ExtResource("23_ss7w2")
}, {
"duration": 1.0,
"texture": ExtResource("24_fp2jk")
}, {
"duration": 1.0,
"texture": ExtResource("25_7d66d")
}, {
"duration": 1.0,
"texture": ExtResource("26_htn0u")
}, {
"duration": 1.0,
"texture": ExtResource("27_2uy4f")
}, {
"duration": 1.0,
"texture": ExtResource("28_q4h76")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 1
scale = Vector2(2, 2)
script = ExtResource("1_x8gya")

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(0.148936, 0.148936)
sprite_frames = SubResource("SpriteFrames_d8ihv")
animation = &"grabbing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("CircleShape2D_re8f4")
debug_color = Color(0.952941, 0, 0.54902, 0.419608)

[node name="interaction_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_zone"]
shape = SubResource("CircleShape2D_nnjnw")
debug_color = Color(0.423529, 0.458824, 1, 0.419608)

[node name="interaction_tooltip" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -63.25)
scale = Vector2(0.246094, 0.246094)
sprite_frames = SubResource("SpriteFrames_bpmib")

[node name="tooltip_label" type="Label" parent="."]
visible = false
offset_left = -37.0
offset_top = -95.5
offset_right = 37.0
offset_bottom = -72.5
text = "Ramasse!"

[connection signal="body_shape_entered" from="interaction_zone" to="." method="_on_interaction_zone_body_shape_entered"]
[connection signal="body_shape_exited" from="interaction_zone" to="." method="_on_interaction_zone_body_shape_exited"]
[connection signal="ready" from="interaction_zone" to="." method="_on_interaction_zone_ready"]
